--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "hardhat clean",
     "test": "hardhat test --network hardhat",
     "deployPaymaster": "hardhat deploy-zksync --script deployPaymaster.ts",
+    "depolyGreeter": "hardhat deploy-zksync --script depolyGreeter.ts",
     "upgradePaymaster": "npx hardhat deploy-zksync --script upgradePaymaster.ts",
     "lint": "yarn lint:js && yarn lint:sol",
     "lint:fix": "yarn lint:js:fix && yarn lint:sol:fix",
@@ -55,6 +56,8 @@
     "@types/mocha": ">=9.1.0",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.0",
-    "typescript": "^5.5.2"
+    "typescript": "^4.9.4",
+    "undici": "^6.19.2",
+    "zksync-web3": "^0.14.3"
   }
 }
