--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deployPaymaster": "hardhat deploy-zksync --script deployPaymaster.ts",
     "depolyGreeter": "hardhat deploy-zksync --script depolyGreeter.ts",
     "upgradePaymaster": "npx hardhat deploy-zksync --script upgradePaymaster.ts",
+    "addWhiteListToken": "npx hardhat run scripts/addWhiteListToken.ts",
+    "setSwitchOpen": "npx hardhat run scripts/setSwitchOpen.ts",
     "lint": "yarn lint:js && yarn lint:sol",
     "lint:fix": "yarn lint:js:fix && yarn lint:sol:fix",
     "lint:js": "prettier --log-level warn --ignore-path .gitignore '**/*.{js,ts}' --check && eslint --ignore-path .gitignore .",
